--- a/trunk/ATF/Atf/Atf/Form1.resx
+++ b/trunk/ATF/Atf/Atf/Form1.resx
@@ -142,6 +142,9 @@
         vwE33PRE7EHtqwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="editionToolStripMenuItem.Action" type="System.Resources.ResXNullRef, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value />
+  </metadata>
   <metadata name="affichageToolStripMenuItem.Action" type="System.Resources.ResXNullRef, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value />
   </metadata>
@@ -195,5 +198,11 @@
   </data>
   <metadata name="acShowTools.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>582, 17</value>
+  </metadata>
+  <metadata name="acToFile.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 56</value>
+  </metadata>
+  <metadata name="saveFileDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>113, 56</value>
   </metadata>
 </root>
