--- a/ATF/Atf/AtfPicturePlugin/Properties/Resources.resx
+++ b/ATF/Atf/AtfPicturePlugin/Properties/Resources.resx
@@ -124,4 +124,10 @@
   <data name="google_maps_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\google_maps_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="staticmapbigRoad" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\staticmapbigRoad.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="staticmapterrainBig" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\staticmapterrainBig.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
