--- a/trunk/ATF/Atf/Atf/Properties/Resources.resx
+++ b/trunk/ATF/Atf/Atf/Properties/Resources.resx
@@ -121,4 +121,10 @@
   <data name="save" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\save.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="staticmapbigRoad" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\staticmapbigRoad.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="staticmapterrainBig" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\staticmapterrainBig.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
